edit project titles

--- a/index.html
+++ b/index.html
@@ -103,14 +103,14 @@
           <section class="project-card">
             <section class="project-text">
               <h3 class="project-title">
-                Using Next.JS to create a coding challenge web application with
-                User login and progress.
+                Using Next.JS to create a coding challenge web application.
               </h3>
               <p class="project-description">
                 AceScript is a group project built at the end of my bootcamp.
                 It’s a full-stack app where users can attempt coding challenges
-                by difficulty level. I worked across the stack and used the
-                opportunity to explore new technologies, strengthen my
+                by difficulty level. User login with bcrypt and use of mongoDb
+                to store users and progress. I worked across the stack and used
+                the opportunity to explore new technologies, strengthen my
                 collaboration skills, and ship a functional MVP under tight time
                 constraints.
               </p>
@@ -130,9 +130,8 @@
           <section class="project-card">
             <section class="project-text">
               <h3 class="project-title">
-                A RESTful API built using test driven development making use of
-                Jest, Express and JavaScript, also using PostgreSQL as the
-                relational database.
+                A RESTful API built with test driven development using Jest,
+                Express, JavaScript and PostgreSQL.
               </h3>
               <p class="project-description">
                 Article Avenues backend API powers a reddit style news site
@@ -160,7 +159,7 @@
           <section class="project-card">
             <section class="project-text">
               <h3 class="project-title">
-                A Reddit style news app built with React
+                A news article app built with React.
               </h3>
               <p class="project-description">
                 Article Avenues frontend connecting to my backend project
