change api title to be shorter

--- a/index.html
+++ b/index.html
@@ -130,8 +130,7 @@
           <section class="project-card">
             <section class="project-text">
               <h3 class="project-title">
-                A RESTful API built with test driven development using Jest,
-                Express, JavaScript and PostgreSQL.
+                A RESTful API built using Test Driven Development.
               </h3>
               <p class="project-description">
                 Article Avenues backend API powers a reddit style news site
