--- a/index.html
+++ b/index.html
@@ -12,6 +12,22 @@
   </head>
   <body>
     <div class="wrapper">
+      <header>
+        <fieldset id="light-dark-switch" class="radio-switch">
+          <legend>Select Theme</legend>
+
+          <input
+            type="radio"
+            name="color-scheme"
+            id="light"
+            value="light"
+            checked
+          />
+          <label for="light">Light</label>
+          <input type="radio" name="color-scheme" id="dark" value="dark" />
+          <label for="dark">Dark</label>
+        </fieldset>
+      </header>
       <article class="main-article">
         <div class="text">
           <h2>Software Developer</h2>
